--- a/styles.css
+++ b/styles.css
@@ -3,9 +3,11 @@
   background-color: black;
   color: white;
   border-radius: 5px;
+  border: none;
 }
 #btn:hover {
   background-color: yellow;
   color: black;
+  border: none;
   border-radius: 30px;
 }
